{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 30,
  "lineage": "e77b9f28-0159-22b7-6070-eb4d46b60c17",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "mtc_ip_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/3a6c1aa9-d3d2-429e-aa5e-003bc92afadd/resourceGroups/mtc_resources/providers/Microsoft.Network/publicIPAddresses/mtc_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.170.252.45",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "mtc_ip",
            "resource_group_name": "mtc_resources",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "mtc_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3a6c1aa9-d3d2-429e-aa5e-003bc92afadd/resourceGroups/mtc_resources/providers/Microsoft.Network/networkInterfaces/mtc_nic",
            "internal_domain_name_suffix": "o2caxu0oz3buvfofvmr41ajuxc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3a6c1aa9-d3d2-429e-aa5e-003bc92afadd/resourceGroups/mtc_resources/providers/Microsoft.Network/publicIPAddresses/mtc_ip",
                "subnet_id": "/subscriptions/3a6c1aa9-d3d2-429e-aa5e-003bc92afadd/resourceGroups/mtc_resources/providers/Microsoft.Network/virtualNetworks/mtc_network/subnets/mtc_subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-15-5A-DA",
            "name": "mtc_nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "mtc_resources",
            "virtual_machine_id": "/subscriptions/3a6c1aa9-d3d2-429e-aa5e-003bc92afadd/resourceGroups/mtc_resources/providers/Microsoft.Compute/virtualMachines/mtcvm"
          },
          "dependencies": [
            "azurerm_public_ip.mtc_ip",
            "azurerm_resource_group.mtc_rg",
            "azurerm_subnet.mtc_subnet",
            "azurerm_virtual_network.mtc_vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mtc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3a6c1aa9-d3d2-429e-aa5e-003bc92afadd/resourceGroups/mtc_resources/providers/Microsoft.Network/networkSecurityGroups/mtc_sg",
            "location": "eastus",
            "name": "mtc_sg",
            "resource_group_name": "mtc_resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "mtc_dev_rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.mtc_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mtc_dev_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/3a6c1aa9-d3d2-429e-aa5e-003bc92afadd/resourceGroups/mtc_resources/providers/Microsoft.Network/networkSecurityGroups/mtc_sg/securityRules/mtc_dev_rule",
            "name": "mtc_dev_rule",
            "network_security_group_name": "mtc_sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "mtc_resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.mtc_sg",
            "azurerm_resource_group.mtc_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mtc_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/3a6c1aa9-d3d2-429e-aa5e-003bc92afadd/resourceGroups/mtc_resources/providers/Microsoft.Network/publicIPAddresses/mtc_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.170.252.45",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "mtc_ip",
            "resource_group_name": "mtc_resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mtc_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mtc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3a6c1aa9-d3d2-429e-aa5e-003bc92afadd/resourceGroups/mtc_resources/providers/Microsoft.Network/virtualNetworks/mtc_network/subnets/mtc_subnet",
            "name": "mtc_subnet",
            "resource_group_name": "mtc_resources",
            "virtual_network_name": "mtc_network"
          },
          "dependencies": [
            "azurerm_resource_group.mtc_rg",
            "azurerm_virtual_network.mtc_vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "mtc_sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3a6c1aa9-d3d2-429e-aa5e-003bc92afadd/resourceGroups/mtc_resources/providers/Microsoft.Network/virtualNetworks/mtc_network/subnets/mtc_subnet",
            "network_security_group_id": "/subscriptions/3a6c1aa9-d3d2-429e-aa5e-003bc92afadd/resourceGroups/mtc_resources/providers/Microsoft.Network/networkSecurityGroups/mtc_sg",
            "subnet_id": "/subscriptions/3a6c1aa9-d3d2-429e-aa5e-003bc92afadd/resourceGroups/mtc_resources/providers/Microsoft.Network/virtualNetworks/mtc_network/subnets/mtc_subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.mtc_sg",
            "azurerm_resource_group.mtc_rg",
            "azurerm_subnet.mtc_subnet",
            "azurerm_virtual_network.mtc_vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "mtc_vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d30b0477-cf4e-4a43-95c5-ab23ed8134ba",
            "id": "/subscriptions/3a6c1aa9-d3d2-429e-aa5e-003bc92afadd/resourceGroups/mtc_resources/providers/Microsoft.Network/virtualNetworks/mtc_network",
            "location": "eastus",
            "name": "mtc_network",
            "resource_group_name": "mtc_resources",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/3a6c1aa9-d3d2-429e-aa5e-003bc92afadd/resourceGroups/mtc_resources/providers/Microsoft.Network/virtualNetworks/mtc_network/subnets/mtc_subnet",
                "name": "mtc_subnet",
                "security_group": "/subscriptions/3a6c1aa9-d3d2-429e-aa5e-003bc92afadd/resourceGroups/mtc_resources/providers/Microsoft.Network/networkSecurityGroups/mtc_sg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mtc_rg"
          ]
        }
      ]
    }
  ]
}